Remove uneeded logging